--- a/index.html
+++ b/index.html
@@ -100,10 +100,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
 
   <!-- Images of Me -->
-  <div class="w3-row-padding w3-padding-16" id="about">
-    <div class="w3-col m6">
-      <img src="https://i.imgur.com/RFoIVgW.jpg" alt="Me" style="width:100%">
-    </div>
 
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>About Me</b></h4>
@@ -111,7 +107,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <hr>
     
       <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
-        <i class="fa fa-download w3-margin-right"></i>Download Resume
+        <a href="resume.pdf" download="resume"><i class="fa fa-download w3-margin-right"></i>Download Resume
       </button>
     </p>
     <hr>
