--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://immense-harbor-59935.herokuapp.com/"><img src="https://i.imgur.com/SqQqOX7.png" alt="Sinai" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="https://immense-harbor-59935.herokuapp.com/">Visit Sinai</a></b></p>
-        <p>This is a static-site template that I built using HTML, CSS, JavaScript and the Materialize styling framework. It is a mock tourism site for Northern Sinai Egypt, a place that I used to work and live. This was a homework assignment that I decided to build out on my own.</p>
+        <p>This is a static-site template that I built using HTML, CSS, JavaScript and the Materialize styling framework. It is a mock tourism site for Northern Sinai Egypt, a place that I used to live and work. This was a homework assignment that I decided to build out on my own.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
@@ -69,7 +69,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://book-club-site.herokuapp.com/"><img src="https://i.imgur.com/9Y72Qx5.png" alt="Books" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="https://book-club-site.herokuapp.com/">Book Club</a></b></p>
-        <p>This is a site I created using Ruby on Rails for the Back-end and React for the Front-end. You can add or delete from a list of authors and add a photo of an author as well. Plans for future development include user authentication, linking to an API for book reviews, a discussion forum, and re-working the styling. This was a solo project, which we had 5 days to complete.</p>
+        <p>This is a site I created using Ruby on Rails for the Back-end and React for the Front-end. You can add or delete from a list of authors and add a photo of an author as well. Plans for future development include user authentication, linking to an API for book reviews, a discussion forum, and re-working the styling. This was a solo project which we had 5 days to complete.</p>
       </div>
     </div>
   
@@ -102,7 +102,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Images of Me -->
 
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
-    <h4><b>About Me</b></h4>
+    <h4 id="about"><b>About Me</b></h4>
     <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
     <hr>
     
