changes to content

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://immense-harbor-59935.herokuapp.com/"><img src="https://i.imgur.com/SqQqOX7.png" alt="Sinai" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="https://immense-harbor-59935.herokuapp.com/">Visit Sinai</a></b></p>
-        <p>This is a static-site template that I built using HTML, CSS, JavaScript and the Materialize styling framework. It is a mock tourism site for Northern Sinai Egypt, a place that I used to live and work. This was a homework assignment that I decided to build out on my own.</p>
+        <p>This is a static-site template that I built using HTML, CSS, JavaScript and the Materialize styling framework. It is a mock tourism site for Southern Sinai Egypt, a place that I used to live and work. This was a homework assignment that I decided to build out on my own.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
