--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
   </div>
   <div class="w3-panel w3-large">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-github w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
+   <a href="https://github.com/mochila83" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/jessannob/" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
+    <a href="https://www.pinterest.com/jessicaannob/" target="_blank"><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>
+    <a href="https://twitter.com/JessicaAnnOB" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+    <a href="https://www.linkedin.com/in/jessica-ann-o-brien-93048550/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
   </div>
 </nav>
 
@@ -52,48 +51,47 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://immense-harbor-59935.herokuapp.com/"><img src="https://i.imgur.com/SqQqOX7.png" alt="Sinai" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://immense-harbor-59935.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/SqQqOX7.png" alt="Sinai" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b><a href="https://immense-harbor-59935.herokuapp.com/">Visit Sinai</a></b></p>
-        <p>This is a static-site template that I built using HTML, CSS, JavaScript and the Materialize styling framework. It is a mock tourism site for Southern Sinai Egypt, a place that I used to live and work. This was a homework assignment that I decided to build out on my own.</p>
+        <p><b><a href="https://immense-harbor-59935.herokuapp.com/" target="_blank">Visit Sinai</a></b></p>
+        <p>This is a static-site template that I built using the Materialize styling framework. I really love using the Materialize library because I think they have great buttons and icons which add to the user experience. I especially like the Materialize color pallet and felt that the selection they offered really complimented the photos that I decided to use. This is a mock tourism site for Southern Sinai Egypt, a place that I used to work and live. This was a homework assignment that I decided to build out on my own. Plans for future development would be to make this site responsive, add drop down menus, links and rework some of the styling.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://stark-bastion-57870.herokuapp.com/user"><img src="https://i.imgur.com/BbiyGnS.png" alt="Dinner" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank"><img src="https://i.imgur.com/BbiyGnS.png" alt="Dinner" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b><a href="https://stark-bastion-57870.herokuapp.com/user">What's For Dinner?</a></b></p>
-        <p>This is a full-stack application using MongoDB, Express, React, and Node.js that allows users to create a personal account, create recipes, and favorite recipes from an existing database. This app was made as group project at General Assembly and styled using Materialize. We were given 5 days to complete the project.</p>
+        <p><b><a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank">What's For Dinner?</a></b></p>
+        <p>This is a full-stack application using MongoDB, Express, React, and Node.js that allows users to create a personal account, create recipes and favorite recipes from an existing database. I came up with the general idea for the app and was responsible for most of the styling, layout and content. This app was made as group project at General Assembly and styled using CSS and Materialize. I really enjoyed working in a group for this project. Two of the group members were really great at backend logic, which was nice as we all divided up the work based on our strengths. We did a lot of mob programming which I especially liked.  We were given 5 days to complete the project.</p>
       </div>
     </div>
-    <div class="w3-third w3-container">
-      <a href="https://book-club-site.herokuapp.com/"><img src="https://i.imgur.com/9Y72Qx5.png" alt="Books" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b><a href="https://book-club-site.herokuapp.com/">Book Club</a></b></p>
-        <p>This is a site I created using Ruby on Rails for the Back-end and React for the Front-end. You can add or delete from a list of authors and add a photo of an author as well. Plans for future development include user authentication, linking to an API for book reviews, a discussion forum, and re-working the styling. This was a solo project which we had 5 days to complete.</p>
+      <div class="w3-third w3-container w3-margin-bottom">
+      <a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank"><img src="https://i.imgur.com/ICTNTKI.png" alt="Conscious" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b><a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank">Conscious Path</a></b></p>
+          <p>Before I started doing web development, I worked in hospitality and luxury spas. Over the years I have become familiar with different types of healing therapies. Living in North Africa, I had the chance to visit Turkish baths as it's a big part of the culture. This is a mock site for a wellness center and it's what I would imagine as the perfect spa. It was built using HTML, CSS, jQuery and Bootstrap. I decided to build this project after I graduated General Assembly and was able to spend a lot more time polishing and building the site. Plans for future development include creating a custom PHP email form with validation.</p>
+        </div>
       </div>
-    </div>
-  
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://boingo-bongo.herokuapp.com/"><img src="https://i.imgur.com/VR2k4qU.png" alt="Travel" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://boingo-bongo.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/VR2k4qU.png" alt="Travel" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b><a href="https://boingo-bongo.herokuapp.com/">Travel Site</a></b></p>
-        <p>This is a full-stack application using Ruby on Rails, styled with Bootstrap. In this app a user can post a review about a city they have visited. The site features full CRUD on posts which is tied to each city. This project was created in 3 days with a group of 3 people at General Assembly.</p>
-      </div>
-    </div>
-    <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/p2.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
-      <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b><a href="https://boingo-bongo.herokuapp.com/" target="_blank">Travel Site</a></b></p>
+        <p>This is a full-stack application using Ruby on Rails. The site is styled with Bootstrap, which I think intergrates really nicely with the Rails framework. In this app a user can post a review about a city they have visited. The site features full CRUD on posts which is tied to each city. This project was created in 3 days with a group of 3 people at General Assembly. Overall, I really enjoyed using Ruby on Rails to create this site. I find that the syntax and logic are a lot more straight forward than other technologies I have used, the Ruby gems can be a great time saver as well. Rails also provides very descriptive error messages which is nice when you are debugging.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="/w3images/p3.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href="https://book-club-site.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/9Y72Qx5.png" alt="Books" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b><a href="https://book-club-site.herokuapp.com/" target="_blank">Book Club</a></b></p>
+        <p>This is a React on Rails app. I used React for the frontend and Rails for the backend. I found this project to be a bit challenging for me and maybe it's because I had to link the two technologies together. The site is hosted on Heroku which has a slow load time, you may need to refresh the page for all the elements to appear. You can add or delete from a list of authors and add a photo of an author as well. Plans for future development include user authentication, linking to an API for book reviews, a discussion forum and reworking the styling. Because backend development is not one of my strengths, I didn't get to spend as much time styling it as I would have liked. This was a solo project which we had 5 days to complete.</p>
+      </div>
+    </div>
+    <div class="w3-third w3-container">
+      <a href="https://invis.io/54DXSW9EN#/258189944_1-_Search_Start" target="_blank"/><img src="https://i.imgur.com/hxsafkn.png?2" alt="Prototype" style="width:100%" class="w3-hover-opacity">
+      <div class="w3-container w3-white">
+        <p><b><a href="https://invis.io/54DXSW9EN#/258189944_1-_Search_Start" target="_blank">InVision Prototype</a></b></p>
+        <p>This is a prototype I built using the InVision UX design tool. I am very interested in the field of UX design and have spent time studying the concepts and trying out some of the tools on my own. The photo assets were provided to me by General Assembly when I attended a short introductory course. When I went home, I watched some tutorials and put together this protoype. I look forward to working with more UX design tools in the future along with learning more about Photoshop, Illustrator and Muse.</p>
       </div>
     </div>
   </div>
@@ -114,11 +112,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   
   <!-- Contact Section -->
   <div class="w3-container w3-padding-large w3-grey">
-    <h4 id="contact"><b>Contact Me</b></h4>
+    <h4 id="contact"><b><a href="mailto:obrien.jessica6@gmail.com">Contact Me</a></b></h4>
     <div class="w3-row-padding w3-center w3-padding-24" style="margin:0 -16px">
       <div class="w3-third w3-dark-grey">
         <p><i class="fa fa-envelope w3-xxlarge w3-text-light-grey"></i></p>
-        <p>obrien.jessica6@gmail.com</p>
+        <p><a href="mailto:obrien.jessica6@gmail.com">obrien.jessica6@gmail.com</a></p>
       </div>
       <div class="w3-third w3-teal">
         <p><i class="fa fa-map-marker w3-xxlarge w3-text-light-grey"></i></p>
@@ -135,7 +133,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-row-padding">
     <div class="w3-third">
       <h3>THANKS!</h3>
-      <p>Thank you for taking the time to look at my portfolio! If you have any questions please feel free to send me an email or give me a call. I am currently looking for opportunities in Front-End Web Development, UX/UI Design, or Quality Assurance Testing.</p>
+      <p>Thank you for taking the time to look at my portfolio! If you have any questions please feel free to send me an email or give me a call. I am currently looking for opportunities in Front-End Web Development and UX/UI Design.</p>
     </div>
     <div class="w3-third">
         <h3>BLOG POSTS</h3>
@@ -156,10 +154,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <h3>SKILLS AND EXPERIENCE</h3>
       <p>
         <span class="w3-tag w3-black w3-margin-bottom">HTML5</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">CSS</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">JavaScript</span>
-        <span class="w3-tag w3-grey w3-small w3-margin-bottom">Bootstrap</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Materialize</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Git/Github</span>
-        <span class="w3-tag w3-grey w3-small w3-margin-bottom">jQuery</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Ruby on Rails</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">React.js</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">jQuery</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Git/Github</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Materialize</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">Bootstrap</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Ruby on Rails</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">React.js</span>
         <span class="w3-tag w3-grey w3-small w3-margin-bottom">Agile</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Node.js</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">SQL</span>
-        <span class="w3-tag w3-grey w3-small w3-margin-bottom">MongoDB</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Express.js</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">MongoDB</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Express.js</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">InVision</span>
       </p>
     </div>
 
