--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
       <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank"><img src="https://i.imgur.com/ICTNTKI.png" alt="Conscious" style="width:100%" class="w3-hover-opacity">
+      <a href="https://conscious-path.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/ICTNTKI.png" alt="Conscious" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
-          <p><b><a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank">Conscious Path</a></b></p>
+          <p><b><a href="https://conscious-path.herokuapp.com/" target="_blank">Conscious Path</a></b></p>
           <p>Before I started doing web development, I worked in hospitality and luxury spas. Over the years I have become familiar with different types of healing therapies. Living in North Africa, I had the chance to visit Turkish baths as it's a big part of the culture. This is a mock site for a wellness center and it's what I would imagine as the perfect spa. It was built using HTML, CSS, jQuery and Bootstrap. I decided to build this project after I graduated General Assembly and was able to spend a lot more time polishing and building the site. Plans for future development include creating a custom PHP email form with validation.</p>
         </div>
       </div>
