--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <span class="w3-tag w3-grey w3-small w3-margin-bottom">jQuery</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Git/Github</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Materialize</span>
         <span class="w3-tag w3-grey w3-small w3-margin-bottom">Bootstrap</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Ruby on Rails</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">React.js</span>
         <span class="w3-tag w3-grey w3-small w3-margin-bottom">Agile</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Node.js</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">SQL</span>
-        <span class="w3-tag w3-grey w3-small w3-margin-bottom">MongoDB</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Express.js</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">InVision</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">MongoDB</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Express.js</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">InVision</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Photoshop</span>
       </p>
     </div>
 
