--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <hr>
     
       <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
-        <a href="resume1.pdf" download="resume"><i class="fa fa-download w3-margin-right"></i>Download Resume
+        <a href="resume.pdf" download="resume"><i class="fa fa-download w3-margin-right"></i>Download Resume
       </button>
     </p>
     <hr>
