--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4 id="about"><b>About Me</b></h4>
-    <p>Hi, I'm Jessica, I am a Front-End Web Developer with a passion for User Experience design. I combine my creativity and analytical skills to solve complex problems. Simple, aesthetically pleasing, and intuitive design is my passion. I seek to create beauty while bringing fun and inspiration through Web Development. I love to adapt, intergrate, and anticipate the wants and needs of others. Understanding what moves people and what gets people excited is what I strive for.</p>
+    <p>Hi, I'm Jessica, I am a Front-End Web Developer with a passion for User Experience and Visual Design. Simple, aesthetically pleasing, and intuitive design is my passion. I seek to create beauty while bringing fun and inspiration through Web Development. I love to adapt, intergrate, and anticipate the wants and needs of others. Understanding what moves people and what gets people excited is what I strive for.</p>
     <hr>
     
       <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
