--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://immense-harbor-59935.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/SqQqOX7.png" alt="Sinai" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="https://immense-harbor-59935.herokuapp.com/" target="_blank">Visit Sinai</a></b></p>
-        <p>This is a static-site template that I built using the Materialize styling framework. Materilize has great buttons and icons which really add to the user experience. The color pallet they offer is great, I think it really complimented the photos that I decided to use. This is a mock tourism site for Southern Sinai Egypt, a place that I used to work and live.</p>
+        <p>This is a static-site template that I built using the Materialize styling framework. Materilize has great buttons and icons which add to the user experience. I also like the color pallet they offer, I think it really complimented the photos that I decided to use. This is a mock tourism site for Southern Sinai Egypt, a place that I used to work and live.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
