--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container">
-      <a href="https://book-club-site.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/9Y72Qx5.png" alt="Books" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://youtu.be/Q_lCJ9bERCQ" target="_blank"><img src="https://i.imgur.com/nGJdn81.png" alt="Azores" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b><a href="https://book-club-site.herokuapp.com/" target="_blank">Book Club</a></b></p>
-        <p>This is a React on Rails app. I used React for the frontend and Rails for the backend. You can add or delete from a list of authors and add a photo of an author as well. Plans for future development include user authentication, linking to an API for book reviews, a discussion forum and reworking the styling. This was a solo project which I had 5 days to complete.</p>
+        <p><b><a href="https://youtu.be/Q_lCJ9bERCQ" target="_blank">Azores Terceira Island Video</a></b></p>
+        <p>This is a video I created about my trip Terceira Island in the Azores Portugal. All pictures and video were taken with the iPhone 8 plus and video editing was done with iMovie. I synchronized many of the images with the music and tried to capture the beauty of this island and its animal inhabitants. I am happy with the result and look forward to doing more audio/visual work in the future.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
