made some changes

--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://immense-harbor-59935.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/SqQqOX7.png" alt="Sinai" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="https://immense-harbor-59935.herokuapp.com/" target="_blank">Visit Sinai</a></b></p>
-        <p>This is a static-site template that I built using the Materialize styling framework. Materilize has great buttons and icons which add to the user experience. I also like the color pallet they offer, I think it really complimented the photos that I decided to use. This is a mock tourism site for Southern Sinai Egypt, a place that I used to work and live.</p>
+        <p>This is static site template for a mock tourism site for Southern Sinai Egypt, a place that I used to work and live.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
       <a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank"><img src="https://i.imgur.com/BbiyGnS.png" alt="Dinner" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank">What's For Dinner?</a></b></p>
-        <p>This is a full-stack application using Node/Express and Mongo/Mongoose. It allows users to create a personal account, create recipes and favorite recipes from an existing database. The app was styled using CSS and Materialize. This was a group project at General Assembly, we were given 5 days to complete the project.</p>
+        <p>This is a full-stack application using Node/Express and Mongo/Mongoose and styled with Materialize.</p>
       </div>
     </div>
       <div class="w3-third w3-container w3-margin-bottom">
       <a href="https://conscious-path.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/ICTNTKI.png" alt="Conscious" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b><a href="https://conscious-path.herokuapp.com/" target="_blank">Conscious Path</a></b></p>
-          <p>Before I started doing web development, I worked in hospitality and luxury spas. Over the years, I have become familiar with different types of healing therapies. This is a mock site for a wellness center and it's what I would imagine as the perfect spa. It was built using HTML, CSS, JavaScript and Bootstrap.</p>
+          <p>A mock site for a wellness center built using HTML, CSS, JavaScript and Bootstrap.</p>
         </div>
       </div>
   <!-- Second Photo Grid-->
@@ -77,21 +77,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="http://mindhak.com/" target="_blank"><img src="https://i.imgur.com/K7QyMrZ.png" alt="Mindhak" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="http://mindhak.com/" target="_blank">MindHak</a></b></p>
-        <p>This is a Wordpress site that was completed in two days at the GoodieNation "Hack The Violence" Hackathon. It helps people learn about emotional intelligence, mindfulness, and self-compassion. The site also uses an IBM Watson chatbot that responds to user's emotions with tips and resources on how to become more mindful.</p>
+        <p>Wordpress site that teaches people about emotional intelligence, mindfulness, and self-compassion. Features include an IBM Watson chatbot that responds to user's emotions with tips and resources on how to become more mindful.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <a href="https://youtu.be/Q_lCJ9bERCQ" target="_blank"><img src="https://i.imgur.com/nGJdn81.png" alt="Azores" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://young-garden-49843.herokuapp.com" target="_blank"><img src="https://i.imgur.com/nGF1Fcs.png?1" alt="Pizza" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b><a href="https://youtu.be/Q_lCJ9bERCQ" target="_blank">Azores Terceira Island Video</a></b></p>
-        <p>This is a video I created about my trip to Terceira Island in the Azores Portugal. All pictures and video were taken with the iPhone 8 plus and video editing was done with iMovie. I synchronized many of the images with the music and tried to capture the beauty of this island and its animal inhabitants. I am happy with the result and look forward to doing more audio/visual work in the future.</p>
+        <p><b><a href="https://young-garden-49843.herokuapp.com" target="_blank">Pizza Express</a></b></p>
+        <p>This is a mock pizza restaurant website that I made using React.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
       <a href="https://invis.io/54DXSW9EN#/258189944_1-_Search_Start" target="_blank"/><img src="https://i.imgur.com/hxsafkn.png?2" alt="Prototype" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b><a href="https://invis.io/54DXSW9EN#/258189944_1-_Search_Start" target="_blank">InVision Prototype</a></b></p>
-        <p>This is a prototype I built using InVision. The photo assets were provided to me by General Assembly. I look forward to working with the new InVision Studio when it launches in 2018.</p>
+        <p>Prototype I built using InVision for searching and booking hotels.</p>
       </div>
     </div>
   </div>
