--- a/index.html
+++ b/index.html
@@ -51,47 +51,47 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://immense-harbor-59935.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/SqQqOX7.png" alt="Sinai" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="http://mindhak.com/" target="_blank"><img src="https://i.imgur.com/2zUrLek.png?1" alt="Mindhak" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b><a href="https://immense-harbor-59935.herokuapp.com/" target="_blank">Visit Sinai</a></b></p>
-        <p>This is static site template for a mock tourism site for Southern Sinai Egypt, a place that I used to work and live.</p>
+        <p><b><a href="http://mindhak.com/" target="_blank">Mind Hak</a></b></p>
+        <p></p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank"><img src="https://i.imgur.com/BbiyGnS.png" alt="Dinner" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank"><img src="https://i.imgur.com/BbiyGnS.png?1" alt="Dinner" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank">What's For Dinner?</a></b></p>
-        <p>This is a full-stack application using Node/Express and Mongo/Mongoose and styled with Materialize.</p>
+        <p></p>
       </div>
     </div>
       <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://conscious-path.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/ICTNTKI.png" alt="Conscious" style="width:100%" class="w3-hover-opacity">
+      <a href="https://conscious-path.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/TCrgEnA.png?1" alt="Conscious" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b><a href="https://conscious-path.herokuapp.com/" target="_blank">Conscious Path</a></b></p>
-          <p>A mock site for a wellness center built using HTML, CSS, JavaScript and Bootstrap.</p>
+          <p></p>
         </div>
       </div>
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="http://mindhak.com/" target="_blank"><img src="https://i.imgur.com/K7QyMrZ.png" alt="Mindhak" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="https://immense-harbor-59935.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/kJ46eRw.png?1" alt="Sinai" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b><a href="http://mindhak.com/" target="_blank">MindHak</a></b></p>
-        <p>Wordpress site that teaches people about emotional intelligence, mindfulness, and self-compassion. Features include an IBM Watson chatbot that responds to user's emotions with tips and resources on how to become more mindful.</p>
+        <p><b><a href="https://immense-harbor-59935.herokuapp.com/" target="_blank">Sinai</a></b></p>
+        <p></p>
       </div>
     </div>
     <div class="w3-third w3-container">
       <a href="https://young-garden-49843.herokuapp.com" target="_blank"><img src="https://i.imgur.com/nGF1Fcs.png?1" alt="Pizza" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="https://young-garden-49843.herokuapp.com" target="_blank">Pizza Express</a></b></p>
-        <p>This is a mock pizza restaurant website that I made using React.</p>
+        <p></p>
       </div>
     </div>
     <div class="w3-third w3-container">
       <a href="https://invis.io/54DXSW9EN#/258189944_1-_Search_Start" target="_blank"/><img src="https://i.imgur.com/hxsafkn.png?2" alt="Prototype" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b><a href="https://invis.io/54DXSW9EN#/258189944_1-_Search_Start" target="_blank">InVision Prototype</a></b></p>
-        <p>Prototype I built using InVision for searching and booking hotels.</p>
+        <p></p>
       </div>
     </div>
   </div>
