--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div>
   <div class="w3-bar-block">
     <a href="#portfolio" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>PORTFOLIO</a> 
-    <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>ABOUT</a> 
+    <a href="#resume" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>RESUME</a> 
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
   </div>
   <div class="w3-panel w3-large">
@@ -100,11 +100,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Images of Me -->
 
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
-    <h4 id="about"><b>About Me</b></h4>
-    <p>Hi, I'm Jessica, I am a Front-End Web Developer with a passion for User Experience and Visual Design. Simple, aesthetically pleasing, and intuitive design is my passion. I seek to create beauty while bringing fun and inspiration through Web Development. I love to adapt, intergrate, and anticipate the wants and needs of others. Understanding what moves people and what gets people excited is what I strive for.</p>
-    <hr>
-    
-      <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
+    <h4 id="resume"></h4> 
+  <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
         <a href="jessica_resume.pdf" download="resume"><i class="fa fa-download w3-margin-right"></i>Download Resume
       </button>
     </p>
@@ -133,7 +130,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-row-padding">
     <div class="w3-third">
       <h3>THANKS!</h3>
-      <p>Thank you for taking the time to look at my portfolio! If you have any questions please feel free to send me an email or give me a call. I am currently looking for opportunities in Front-End Web Development and UX/UI Design.</p>
+      <p>Thank you for taking the time to look at my portfolio! If you have any questions please feel free to get in touch.</p>
     </div>
     <div class="w3-third">
         <h3>BLOG POSTS</h3>
@@ -157,7 +154,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
         <span class="w3-tag w3-grey w3-small w3-margin-bottom">jQuery</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Git/Github</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Materialize</span>
         <span class="w3-tag w3-grey w3-small w3-margin-bottom">Bootstrap</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Ruby on Rails</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">React.js</span>
         <span class="w3-tag w3-grey w3-small w3-margin-bottom">Agile</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Node.js</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">SQL</span>
-        <span class="w3-tag w3-grey w3-small w3-margin-bottom">MongoDB</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Express.js</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">InVision</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Photoshop</span>
+        <span class="w3-tag w3-grey w3-small w3-margin-bottom">MongoDB</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Express.js</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">InVision</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">Photoshop</span> <span class="w3-tag w3-grey w3-small w3-margin-bottom">WordPress</span>
       </p>
     </div>
 
