--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank"><img src="https://i.imgur.com/BbiyGnS.png?1" alt="Dinner" style="width:100%" class="w3-hover-opacity"></a>
-      <div class="w3-container w3-white">
-        <p><b><a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank">What's For Dinner?</a></b></p>
-        <p></p>
-      </div>
+        <a href="https://immense-harbor-59935.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/kJ46eRw.png?1" alt="Sinai" style="width:100%" class="w3-hover-opacity"></a>
+        <div class="w3-container w3-white">
+          <p><b><a href="https://immense-harbor-59935.herokuapp.com/" target="_blank">Sinai</a></b></p>
+          <p></p>
+        </div>
     </div>
       <div class="w3-third w3-container w3-margin-bottom">
       <a href="https://conscious-path.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/TCrgEnA.png?1" alt="Conscious" style="width:100%" class="w3-hover-opacity">
@@ -73,10 +73,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
-    <div class="w3-third w3-container w3-margin-bottom">
-      <a href="https://immense-harbor-59935.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/kJ46eRw.png?1" alt="Sinai" style="width:100%" class="w3-hover-opacity"></a>
+      <div class="w3-third w3-container">
+      <a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank"><img src="https://i.imgur.com/BbiyGnS.png?1" alt="Dinner" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
-        <p><b><a href="https://immense-harbor-59935.herokuapp.com/" target="_blank">Sinai</a></b></p>
+        <p><b><a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank">What's For Dinner?</a></b></p>
         <p></p>
       </div>
     </div>
