--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4 id="resume"></h4> 
   <button class="w3-button w3-dark-grey w3-padding-large w3-margin-top w3-margin-bottom">
-        <a href="jessica_resume.pdf" download="resume"><i class="fa fa-download w3-margin-right"></i>Download Resume
+        <a href="jessica-obrien-cv.pdf" download="resume"><i class="fa fa-download w3-margin-right"></i>Download Resume
       </button>
     </p>
     <hr>
