--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="http://mindhak.com/" target="_blank"><img src="https://i.imgur.com/2zUrLek.png?1" alt="Mindhak" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="http://mindhak.com/" target="_blank">Mind Hak</a></b></p>
-        <p></p>
+        <p>WordPress Site</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
         <a href="https://immense-harbor-59935.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/kJ46eRw.png?1" alt="Sinai" style="width:100%" class="w3-hover-opacity"></a>
         <div class="w3-container w3-white">
           <p><b><a href="https://immense-harbor-59935.herokuapp.com/" target="_blank">Sinai</a></b></p>
-          <p></p>
+          <p>Materialize Prototype</p>
         </div>
     </div>
       <div class="w3-third w3-container w3-margin-bottom">
       <a href="https://conscious-path.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/TCrgEnA.png?1" alt="Conscious" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b><a href="https://conscious-path.herokuapp.com/" target="_blank">Conscious Path</a></b></p>
-          <p></p>
+          <p>HTML, CSS, JavaScript and Bootstrap</p>
         </div>
       </div>
   <!-- Second Photo Grid-->
@@ -77,21 +77,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank"><img src="https://i.imgur.com/BbiyGnS.png?1" alt="Dinner" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank">What's For Dinner?</a></b></p>
-        <p></p>
+        <p>Node/Express App with Mongo/Mongoose</p>
       </div>
     </div>
     <div class="w3-third w3-container">
       <a href="https://young-garden-49843.herokuapp.com" target="_blank"><img src="https://i.imgur.com/nGF1Fcs.png?1" alt="Pizza" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="https://young-garden-49843.herokuapp.com" target="_blank">Pizza Express</a></b></p>
-        <p></p>
+        <p>React Site</p>
       </div>
     </div>
     <div class="w3-third w3-container">
       <a href="https://invis.io/54DXSW9EN#/258189944_1-_Search_Start" target="_blank"/><img src="https://i.imgur.com/hxsafkn.png?2" alt="Prototype" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b><a href="https://invis.io/54DXSW9EN#/258189944_1-_Search_Start" target="_blank">InVision Prototype</a></b></p>
-        <p></p>
+        <p><b><a href="https://invis.io/54DXSW9EN#/258189944_1-_Search_Start" target="_blank">Hotel Booking App</a></b></p>
+        <p>InVision Prototype</p>
       </div>
     </div>
   </div>
