--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="http://mindhak.com/" target="_blank"><img src="https://i.imgur.com/2zUrLek.png?1" alt="Mindhak" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="http://mindhak.com/" target="_blank">Mind Hak</a></b></p>
-        <p>WordPress Site</p>
+        <p>WordPress Mental Health Site</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-        <a href="https://immense-harbor-59935.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/kJ46eRw.png?1" alt="Sinai" style="width:100%" class="w3-hover-opacity"></a>
+        <a href="http://vinayarora.net/" target="_blank"><img src="https://i.imgur.com/lY4v2vQ.png?1" alt="Music" style="width:100%" class="w3-hover-opacity"></a>
         <div class="w3-container w3-white">
-          <p><b><a href="https://immense-harbor-59935.herokuapp.com/" target="_blank">Sinai</a></b></p>
-          <p>Materialize Prototype</p>
+          <p><b><a href="http://vinayarora.net/" target="_blank">Music Site</a></b></p>
+          <p>WordPress Music Site</p>
         </div>
     </div>
       <div class="w3-third w3-container w3-margin-bottom">
       <a href="https://conscious-path.herokuapp.com/" target="_blank"><img src="https://i.imgur.com/TCrgEnA.png?1" alt="Conscious" style="width:100%" class="w3-hover-opacity">
         <div class="w3-container w3-white">
           <p><b><a href="https://conscious-path.herokuapp.com/" target="_blank">Conscious Path</a></b></p>
-          <p>HTML, CSS, JavaScript and Bootstrap</p>
+          <p>HTML, CSS, jQuery, and Bootstrap</p>
         </div>
       </div>
   <!-- Second Photo Grid-->
@@ -77,7 +77,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank"><img src="https://i.imgur.com/BbiyGnS.png?1" alt="Dinner" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b><a href="https://stark-bastion-57870.herokuapp.com/user" target="_blank">What's For Dinner?</a></b></p>
-        <p>Node/Express App with Mongo/Mongoose</p>
+        <p>Node/Express with Mongo/Mongoose App</p>
       </div>
     </div>
     <div class="w3-third w3-container">
